# INV-Backend

./: .env  .gitignore  DbSchema.drawio  DbScripts.sql  README.Docker.md  README.md  build.sh  connect_db.sh  dev.compose.env  docker-compose.yml  dockerfile  dockerfile.nginx  entrypoint.sh  inventaire-mapping.csv  local.compose.env  local.standalone.env  makefile  map_inventaire.xlsx  nginx.conf  populate.sh
.github/workflows/: buil_and_push_image.yaml  build_and_push_backend_image.yaml  build_and_push_nginx_image.yaml  compile_format_test.yaml  compile_format_test_scripts.yaml  compile_format_test_server.yaml
INV-Frontend/: .env
INV-Frontend/src/: API.ts
container/: .env  README.Docker.md  docker-compose.db.yml  docker-compose.yml  nginx.conf
csv-reader/: Cargo.toml
csv-reader/src/: lib.rs
csv_reader/: Cargo.toml
csv_reader/src/: lib.rs
documentation/: CloudSchema.drawio  DbSchema.drawio  cloudSchemav2.drawio  domainLogic.drawio
excel_reader/: Cargo.toml
excel_reader/src/: lib.rs
excel_to_sql/: Cargo.toml
excel_to_sql/src/: lib.rs
k8s/: backend-deploy.yml  backend-service.yml  db-deploy.yml  db-service.yml  frontend-deploy.yml  frontend-service.yml  inv-ingress.yml  proxy-deploy.yml  proxy-service.yml
rust/: .gitignore  Cargo.toml  README.Docker.md  docker-compose.yml  dockerfile
rust/src/: main.rs
scripts/: .env  DbScripts.sql  db_script.sql  deploy_compose.sh  entrypoint.sh
scripts/excel_to_sql/: .env  Cargo.toml  README.md
scripts/excel_to_sql/.sqlx/: query-0a8ec926e5adba81c897c11c26c4fe37e6ab1ea7313c438048569b57867591b6.json  query-125ed0f03ece4152f0e4b6239a3e33c39c4735ef54f07df093275cec91037ba9.json  query-42430663a075ee9079fc5078e8ace47b3999813ba87a79474fb0569b21e0d721.json  query-4edec479a0b8afad479f854f6ec6937b076cc54403f366b4649e4b5acc509998.json  query-7d5b07e527853ca0a6a8f9b29b250b0644a2c7d3f9a8acee188a8bd93097c578.json  query-b722cfe5ae1d66c4fc6b2e0e9a37f0f8e5c25d146c673b615c3af9d4aae19ad6.json  query-be7a8d7881b207bc15c7cc8b0b9ff862a12c68545cc5b24de1cf61730446a2e0.json  query-e7e70ac519f997efa12d4d906eefa4c0b0ad56ae146517a2790744f2330ab604.json
scripts/excel_to_sql/src/: data_handling.rs  lib.rs  main.rs
scripts/excel_to_sql/src/data_handling/: data_parser.rs  excel_reader.rs  sql_handler.rs
server/: .env  Cargo.toml  Makefile  dockerfile  entrypoint.sh  repothunder-collection_CrateMe!.json
server/.sqlx/: query-0b2d9438ea185369cbf41563a52d1acff685567ec3306d100214d02bc12592ce.json  query-170413f7904291e4f3c2860ffde1496a95c8fb19cbe9c5d32a2017f8ae090ee0.json  query-1780c379027ac1211a0916355d8e8d4a98fc5083c38c8e56ad7621ebf3005c31.json  query-2783186a4d7f680551af96b7b10abca4616838102349142badaaff3af3118402.json  query-503d1b20f5f951e125b5cd91a8ab0aa21c980eca0fc84c2a0c32c6861c4f4b49.json  query-5821a9503f80ddf25c0e4abc4796ac9272e0f27f08e8652a3504e2fc478d63e4.json  query-7b4bf54ad285df29b9245f2a1f483b86cda4e4eb120e193d93e9953d570fbfac.json  query-aa73f567296fe531d30717f91b231d119b2bb4161651327572a1deda5753e8a2.json  query-ab75dc22780715c79fdc44e24694b67c4f3820ac180b83ec4147f53c54c21ff7.json  query-de18418d5d05b6fa43c1ca025079981af9edd125a90a6f3a3d0c08ecb8206a16.json  query-efc236f153042025b4cf9a8d3e48e52f50a7402a7e0e805ed758daf8f17ccc50.json  query-f455aa4ed7740e82cf22ffe4084855a41d2cab42d9741fdeee0c37443f25de5b.json
server/app/: Cargo.toml
server/app/src/: main.rs
server/domain/: Cargo.toml
server/domain/src/: app_handling.rs  lib.rs  model_handling.rs  models.rs  ports.rs  services.rs
server/domain/src/app_handling/: events.rs
server/domain/src/events/: events.rs
server/domain/src/model_handling/: inventory_item.rs  model_handler.rs
server/domain/src/models/: domain_error.rs  inventory.rs  inventory_item.rs  inventory_items.rs  item.rs  place.rs
server/domain/src/ports/: event_publisher.rs  inventory_item_ports.rs  item_ports.rs  place_ports.rs
server/domain/src/services/: inventory_item_service.rs  item_service.rs  order_services.rs  place_service.rs
server/repository/: Cargo.toml
server/repository/src/: adapters.rs  data_handling.rs  db_handler.rs  in_memory_handler.rs  lib.rs
server/repository/src/adapters/: item_list_adapter.rs  item_sqlx_postgres_adapter.rs  list_adapter.rs  place_list_adapter.rs  sqlx_postgres_adapter.rs
server/repository/src/data_handling/: pool_handler.rs  sql_handler.rs  storage_handler.rs  users_handler.rs
server/repository/src/in_memory_handler/: list_handler.rs
server/resource/: Cargo.toml
server/resource/src/: adapters.rs  api_handling.rs  lib.rs  mappers.rs  resource_handling.rs
server/resource/src/adapters/: axum_server.rs  event_publisher_impl.rs  json_adapter.rs
server/resource/src/api_handling/: json_api_handler.rs
server/resource/src/resource_handling/: json_api_handler.rs  runtime_handler.rs
server/resource/tests/: api_integration_tests.rs
server/service/: Cargo.toml
server/service/src/: lib.rs  service_handling.rs
server/service/src/service_handling/: auth.rs  auth_handler.rs  crypto.rs  db_handler.rs  error.rs
