[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow             = "1.0"
axum               = { version = "0.7", features = ["tracing"] }
clap               = { version = "4.5", features = ["derive"] }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
tower-http         = { version = "0.5", features = ["trace", "cors"] }
tokio              = { version = "1.29", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid               = { version = "1.0", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "runtime-tokio-native-tls", "postgres", "uuid"] }
tokio-postgres = "0.7"
dotenv = "0.15.0"
csv_reader = { path = "../csv_reader" }

[dev-dependencies]
axum-test = "14.4"
