[package]
name = "excel_to_sql"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.25.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.1", features = [
    "runtime-tokio",
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
] }
tokio-postgres = "0.7.11"
tempfile = "3.12.0"
xlsxwriter = "0.6.1"
