[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
resource = { path = "../resource" }
repository = { path = "../repository" }

axum = { version = "0.7.5", features = ["tracing"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["cors"] }
dotenv = { version = "0.15.0" }

[dev-dependencies]
axum-test = "15.3.0"
hyper = { version = "1.4.1", features = ["full"] }
