[package]
name = "resource"
version = "0.1.0"
edition = "2021"

[dependencies]
service = { path = "../service" }
domain = { path = "../domain" }

serde_json = "1.0.127"
axum = "0.7.5"

sqlx = { version = "0.8.1", features = [
    "runtime-tokio-rustls",
    "postgres",
    "json",
] }

warp = "0.3.7"
