[package]
name = "resource"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
tokio = { version = "1.40.0", features = ["full"] }
axum = { version = "0.7.6", features = ["macros"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.0", features = ["cors"] }
tracing = { version = "0.1.40" }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
